--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/beltdb
+spring.datasource.url=jdbc:mysql://localhost:3306/users
 spring.datasource.username=root
 spring.datasource.password=123456
 
