--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,11 @@
 			<artifactId>caelum-stella-core</artifactId>
 			<version>2.1.2</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
